# metadata_app_pak

./: .gitmodules  CMakeLists.txt  README.md  crc32.c  crc32.h  main.c  pak.h
doc/: pak.drawio
